# BICL

./: BICL.cabal  README.md
src/: Lexeme.hs  Main.hs  Parser.hs  TypeDeduction.hs  Types.hs
src/Data/: BinaryTree.hs  Scope.hs
src/Parser/: Lexer.hs  Types.hs
src/TypeDeduction/: Inference.hs  Scope.hs  Types.hs  Unification.hs
